<resources>
    <!--下拉刷新ListView的尺寸-->

    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">放开以加载更多</string>
    <string name="header_hint_refresh_normal">下拉刷新...</string>
    <string name="header_hint_refresh_ready">放开以刷新...</string>
    <string name="header_hint_refresh_loading">正在载入&#8230;</string>
    <string name="header_hint_refresh_time">上次更新时间:</string>
    <!-- -->
    <string name="app_name">NewSxi</string>
    <string name="btn_lianjie">连 接</string>
    <string name="btn_shezhi">设置</string>
    <string name="btn_shebei">设备信息</string>
    <string name="btn_idchaxun">ID 查询</string>
    <string name="btn_shengji">升级</string>
    <string name="btn_shiyongjiaocheng">使用教程</string>
    <string name="btn_shuomingshu">说明书</string>
    <string name="btn_kefu">在线客服</string>
    <string name="btn_huodong">活动</string>
    <string name="btn_fankui">反馈</string>
    <string name="btn_shouhou">售后</string>
    <string name="btn_xiaoshoumendian">销售门店</string>
    <string name="unknown_device">Unknown device</string>
    <string name="searching">搜索中...</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="connecting">连接中...</string>
    <string name="conSuccess" >连接成功</string>
    <string name="point_out_title">Tips</string>
    <string name="point_out_information_2">请按照以下操作进行重置：\\n1.退出App\\n2.手动操作设备,进入『设备配对』菜单\\n3.长按Enter键,直到设备显示蓝牙配对画面\\n4.重新启动App,重新搜索,并点击连接搜索到的设备来完成配对</string>
    <string name="close_the_tip">关闭</string>
    <string name="disConnect">断开了</string>
</resources>
